--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/dist/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
     <title>IPv6 Subnetting</title>
 </head>
 <body style="font-family: 'Montserrat', sans-serif;">
@@ -35,7 +35,7 @@
             <form class="mb-5">
                 <div class="mb-3">
                     <label for="ipv6Address" class="form-label">IPv6 Address</label>
-                    <input type="text" class="form-control" id="ipv6Address" placeholder="1111:2222:3333:4444:5555:6666:7777:8888">
+                    <input type="text" class="form-control" id="ipv6Address" placeholder="" autocomplete="off">
                     <div class="valid-feedback">
                         Looks Good!
                     </div> 
@@ -45,7 +45,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="prefixLength" class="form-label">Prefix Length</label>
-                    <input type="number" class="form-control" id="prefixLength" min="0">
+                    <input type="number" class="form-control" id="prefixLength" min="0" autocomplete="off">
                     <div class="valid-feedback">
                         Looks Good!
                     </div> 
@@ -55,7 +55,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="subnetBits" class="form-label">Subnet Bits</label>
-                    <input type="number" class="form-control" id="subnetBits" min="0" max="125">
+                    <input type="number" class="form-control" id="subnetBits" min="0" max="125" autocomplete="off">
                     <div class="valid-feedback">
                         Looks Good!
                     </div> 
@@ -100,56 +100,176 @@
         </main>
 
         <!-- Info section -->
-        <section id="infoSection" class="container-fluid min-vh-100 text-white bg-dark pt-3">
+        <section id="infoSection" class="container-fluid min-vh-100 text-white bg-dark pt-3 mb-5">
             <h2 class="text-center mb-5">IPv6 Subnetting Program</h2>
-            <div class="container">
-                <div class="row gy-4">
-                    <div class="col-12">
-                        <h3>What this app is about?</h3>
-                        <p>
+            
+            <!-- Accordion -->
+            <div class="accordion accordion-flush text-white" id="accordionExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                            aria-expanded="false" aria-controls="collapseOne">
+                            What's this app is about?
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne">
+                        <div class="accordion-body">
                             This app can be used to check your work whenever your're learning or practicing IPv6 subnetting. 
                             This app is free for anyone to use.
-                        </p>
+                        </div>
                     </div>
-                    <div class="col-12">
-                        <h3>How to use this app?</h3>
-                        <ol>
-                            <li>Enter an IPv6 Address.</li>
-                            <li>Enter a Prefix Length.</li>
-                            <li>Enter the number of bits (or borrowed bits) for subnet portion.</li>
-                            <li>Click the submit button.</li>
-                        </ol>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            How to use this app?
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo">
+                        <div class="accordion-body">
+                            <ol class="list-group list-group-numbered list-group-flush bg-dark text-white">
+                                <li class="list-group-item">Enter an IPv6 Address</li>
+                                <li class="list-group-item">Enter a Prefix Length</li>
+                                <li class="list-group-item">Enter the number of bits (or borrowed bits) for subnet portion</li>
+                                <li class="list-group-item">Click the submit button</li>
+                            </ol>                          
+                        </div>
                     </div>
-                    <div class="col-12">
-                        <h3>About the output?</h3>
-                        <ul>
-                            <li>By default the app will display the first subnet (Subnet zero).</li>
-                            <li>You can find other subnets if available by clicking on the subnet label or the subnet number input next to it.</li>
-                            <li>The Hosts label represents the number of host per subnet.</li>
-                        </ul>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            About the output?
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree">
+                        <div class="accordion-body">
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">By default the app will display the first subnet (Subnet zero)</li>
+                                <li class="list-group-item">You can find other subnets if available by clicking on the subnet label or the subnet number input next to it</li>
+                                <li class="list-group-item">The Hosts label represents the number of host per subnet</li>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="col-12">
-                        <h3>Features</h3>
-                        <p>Conversions</p>
-                        <ul>
-                            <li>Binary to Hexadecimals</li>
-                            <li>Decimal to Hexadecimals</li>
-                            <li>Decimal to Binary</li>
-                        </ul>
-                        <p>Validations</p>
-                        <ul>
-                            <li>IPv6 Address Format</li>                            
-                            <li>IPv6 Address Type</li>                            
-                        </ul>
-                        <p>Generates</p>
-                        <ul>
-                            <li>EUI-64</li>
-                            <li>Link-Local Address</li>
-                            <li>Solicited-Node Address</li>                            
-                        </ul>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingFour">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                            About the features?
+                        </button>
+                    </h2>
+                    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour">
+                        <div class="accordion-body">
+                            <h6 class="fw-bold">CONVERSIONS</h6>
+                            <ul class="list-group list-group-flush ps-1 mb-3">
+                                <li class="list-group-item d-flex justify-content-between align-items-start">
+                                    <div class="ms-2 me-auto">
+                                        <div class="fw-semibold">Bin to Hex</div>
+                                        <small>This option will convert binaries to hexadecimals and vice versa.</small>
+                                    </div>                                    
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between align-items-start">
+                                    <div class="ms-2 me-auto">
+                                        <div class="fw-semibold">Dec to Bin</div>
+                                        <small>This option will convert decimals to binaries and vice versa.</small>
+                                    </div>                                    
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between align-items-start">
+                                    <div class="ms-2 me-auto">
+                                        <div class="fw-semibold">Hex to Dec</div>
+                                        <small>This option will convert hexadecimals to decimals and vice versa.</small>
+                                    </div>                                    
+                                </li>
+                            </ul>
+                            <h6 class="fw-bold">VALIDATIONS</h6>
+                            <ol class="list-group list-group-flush ps-1 mb-3">
+                                <li class="list-group-item d-flex justify-content-between align-items-start">
+                                    <div class="ms-2 me-auto">
+                                        <div class="fw-semibold">IPv6 Address Format</div>
+                                        <small>This option will check if an input address is valid.</small>
+                                    </div>                                    
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between align-items-start">
+                                    <div class="ms-2 me-auto">
+                                        <div class="fw-semibold">MAC Address Format</div>
+                                        <small>This option will check if an input address is valid.</small>
+                                    </div>                                    
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between align-items-start">
+                                    <div class="ms-2 me-auto">
+                                        <div class="fw-semibold">IPv6 Address Type</div>
+                                        <small>
+                                            This option will determine whether an ipv6 address is a public
+                                            or private.
+                                        </small>
+                                    </div>                                    
+                                </li>
+                            </ol>
+                            <h6 class="fw-bold">GENERATES</h6>
+                            <ol class="list-group list-group-flush ps-1 mb-3">
+                                <li class="list-group-item d-flex justify-content-between align-items-start">
+                                    <div class="ms-2 me-auto">
+                                        <div class="fw-semibold">Interface ID eui-64</div>
+                                        <small>
+                                            This option will generate an interface ID using the eui-64 logic.
+                                        </small>
+                                    </div>                                    
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between align-items-start">
+                                    <div class="ms-2 me-auto">
+                                        <div class="fw-semibold">IPv6 Address eui-64</div>
+                                        <small>
+                                            This option will generate an ipv6 unicast address using the eui-64
+                                            logic. The user should include an ipv6 address in the above ipv6 
+                                            address field. The user can just put the first 16 hex digits 
+                                            (first 64 bits or the network portion) or the complete ipv6 
+                                            address then a mac address in the modal window. The output will
+                                            be in abbreviated form.
+                                        </small>
+                                    </div>                                    
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between align-items-start">
+                                    <div class="ms-2 me-auto">
+                                        <div class="fw-semibold">Solicited-Node Address</div>
+                                        <small>
+                                            This option will generate a Solicited-Node Multicast Address.
+                                            The output will be in abbreviated form.                                            
+                                        </small>
+                                    </div>                                    
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between align-items-start">
+                                    <div class="ms-2 me-auto">
+                                        <div class="fw-semibold">Link-Local Address</div>
+                                        <small>
+                                            This option will generate a Link-Local Unicast Address using the
+                                            prefix FE8/10 and eui-64 logic for the interface ID. The output 
+                                            will be in abbreviated form.
+                                        </small>
+                                    </div>                                    
+                                </li>
+                            </ol>
+                            <h6 class="fw-bold">UTILITIES</h6>
+                            <ol class="list-group list-group-flush list-group ps-1 mb-3">
+                                <li class="list-group-item d-flex justify-content-between align-items-start">
+                                    <div class="ms-2 me-auto">
+                                        <div class="fw-semibold">Abbreviate</div>
+                                        <small>This option will abbreviate an ipv6 address.</small>
+                                    </div>                                    
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between align-items-start">
+                                    <div class="ms-2 me-auto">
+                                        <div class="fw-semibold">Expand</div>
+                                        <small>This option will expand an abbreviated ipv6 address.</small>
+                                    </div>                                    
+                                </li>
+                            </ol>                                                        
+                        </div>
                     </div>
-                </div>                                
-            </div>            
+                </div>
+            </div>
         </section>
 
         <!-- Offcanvas Section-->
@@ -293,7 +413,7 @@
                         <form id="modal-form">
                             <div class="mb-3">
                                 <label id="modal-input-label" for="modal-input" class="col-form-label">Input:</label>
-                                <input type="text" id="modal-input" class="form-control" placeholder="Input">
+                                <input type="text" id="modal-input" class="form-control" placeholder="Input" autocomplete="off">
                                 <div class="valid-feedback">
                                     Looks good!
                                 </div> 
